# arm_rstiny

./: .gitignore  .gitmodules  Cargo.toml  DRIVER_MODEL_SKETCH.md  MICROKERNEL_DESIGN.md  Makefile  build.rs  link.lds  link.lds.template  linker.ld  pcie_test_impl.c  rtl8169.c  rust-toolchain.toml  text.txt  tinyconfig.toml
.cargo/: config.toml
.github/instructions/: 指定生成.instructions.md
docs/: RTL8125_DRIVER_FIX.md  pcie_device_detection_analysis.md
provider-core/: Cargo.toml
provider-core/src/: lib.rs
provider-macros/: Cargo.toml
provider-macros/src/: lib.rs
src/: allocator.rs  boot.rs  boot.s  config.rs  console.rs  error.rs  lang_items.rs  logging.rs  main.rs  net.rs  percpu.rs  platform.rs  timer.rs  user.rs  utils.rs
src/arch/: boot.rs  boot.s  config.rs  context.rs  context_frame.rs  dw_apb_uart.rs  gicv3.rs  instructions.rs  mem.rs  mod.rs  page_table.rs  psci.rs  trap.rs
src/arch/device/: dw_apb_uart.rs  generic_timer.rs  gicv3.rs  mod.rs  pl011.rs
src/arch/exception/: context.rs  mod.rs
src/boot/: entry.rs  init.rs  mmu.rs  mod.rs
src/config/: devices.rs  kernel.rs  mod.rs
src/console/: logger.rs  mod.rs  print.rs  tty.rs
src/device/: capability.rs  mod.rs  provider.rs
src/driver/: driver_base.rs  mod.rs  net_buf.rs  pci.rs  pcie_dw.rs  smoltcp_impl.rs
src/drivers/: fatfs.rs  fdt.rs  mod.rs
src/fs/: disk.rs  fat32.rs  fs9p.rs  mod.rs  ops.rs  p9.rs
src/hal/: context.rs  cpu.rs  exception.rs  mmu.rs  mod.rs  percpu.rs  spin.rs
src/mm/: addr.rs  allocator.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  paging.rs  phys.rs  uaccess.rs
src/net/: device.rs  mod.rs  ping.rs
src/pci/: mod.rs
src/platform/: board.rs  mod.rs
src/sync/: mod.rs
src/syscall/: mod.rs
src/task/: context.rs  manager.rs  mod.rs  scheduler.rs  structs.rs  switch.S  switch.rs  task.rs  task_ops.rs  task_ref.rs  tests.rs  thread.rs  timers.rs  wait_queue.rs
src/test/: allocator.rs  fatfs.rs  fatfs_perf.rs  mod.rs  virtio.rs
src/tests/: allocator.rs  fs_ops.rs  gicv3.rs  mod.rs  perf.rs  scheduler.rs  task.rs  tests.rs  unittest_demo.rs
src/user/: command.rs  mod.rs  registry.rs
src/utils/: boot.s  console.rs  heap_allocator.rs  logging.rs  mod.rs  platform.rs  timer.rs
src/virtio/: error.rs  memory.rs  mmio.rs  mod.rs
task/: manager.rs  mod.rs  thread.rs
tools/chainloader/: demo_payload_rpi4.img  kernel8.img
tools/device_tree/: qemu-virt.dtb
tools/orangepi5/: boot.cmd  make_boot.sh  make_flash.sh  parameter.txt  rk3588-orangepi-5-plus.dts  upload_flash.sh
unittest/: Cargo.toml
unittest-macros/: Cargo.toml
unittest-macros/src/: lib.rs
unittest/src/: lib.rs  runner.rs  test_examples.rs  test_framework.rs  test_framework_basic.rs
xtask/: Cargo.toml  README.md  build.rs
xtask/src/: dwarf.rs  main.rs  plugins.rs  utils.rs
(+75 files in other folders)
