[package]
name = "rstiny_arm"
version = "0.1.0"
edition = "2024"

[features]
default = ["qemu"]
pci = []
net = ["pci"]

opi5p = ["net"]
qemu = []

[dependencies]
bitflags = "2.10"
memory_addr = "0.4"
page_table_entry = "0.5"
aarch64-cpu = "11.1.0"

log = "0.4"
talc = "4.4.3"
kspin = "0.1"
spin = "0.10.0"
dw_apb_uart = "0.1"
lazyinit = "0.2"
arm-gic = "0.7.1"
int_ratio = "0.1"
thiserror = { version = "2.0.17", default-features = false }
arm_pl011 = "0.1"

tock-registers = "0.10.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
