[package]
name = "rstiny_arm"
version = "0.1.0"
edition = "2024"

[features]
default = ["qemu", "fat32"]

opi5p = []
qemu = []
fat32 = ["dep:fatfs"]
fs9p = ["dep:fs9p"]

[dependencies]
# Architecture & Hardware
aarch64-cpu = "11.2.0"
arm-gic = "0.7.1"
tock-registers = "0.10.1"

# Memory Management
memory_addr = "0.4"
page_table_entry = "0.6.0"
talc = "4.4.3"

# Drivers
arm_pl011 = "0.1"
dw_apb_uart = "0.1"
virtio-drivers = "0.12.0"
flat_device_tree = "3.1.1"

# Utilities & Common
anyhow = { version = "1.0", default-features = false }
bitflags = "2.10"
const_env = "0.1.5"
int_ratio = "0.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
lazyinit = "0.2"
lock_api = "0.4.14"
log = "0.4"
rand = { version = "0.9", default-features = false, features = ["small_rng"] }

# Data Structures
intrusive-collections = "0.10"
weak-map = "0.1"

# Debugging
axbacktrace = { version = "0.1.1", features = ["alloc", "dwarf"] }
fatfs = { git = "https://github.com/rafalh/rust-fatfs", default-features = false, features = ["alloc", "unicode"], optional = true }
fs9p = { version = "0.1", optional = true }
ext4_rs = "1.3.3"

# Testing & Benchmarking
unittest = { path = "unittest" }

[patch.crates-io]
virtio-drivers = { path = "virtio-drivers" }

[profile.dev]
panic = "abort"
debug = 2

[profile.release]
panic = "abort"
debug = 2
